@@ -1,6 +1,11 @@
 devel
 -----
 
+* Make the `IS_IPV4` AQL function behave identical on MacOS as on other
+  platforms. It previously allowed leading zeros in octets on MacOS,
+  whereas on other platforms they were disallowed.
+  Now this is disallowed on MacOS as well.
+
 * Added new metric "arangodb_aql_slow_query" for slow AQL queries, so this can 
   be monitored more easily.
 
